<resources>
    <string name="app_name">AsTas</string>
    <string name="label_tasks">Tarefas</string>
    <string name="new_title">Título</string>
    <string name="insert_description">Descrição</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="create_task">Criar Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="label_add_new_task">Nova Tarefa</string>
    <string name="example_title">Passear com o cachorro</string>
    <string name="open_more_opt">abre mais opções</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_empty_tasks">Sem tarefas hoje!</string>
</resources>